Ticket #24649: Use GWT for client-side rendering of diagrams.
* Added controls for server and client.
* Download diagram from server in JSON format.
* Render diagram to SVG DOM in the browser.
* Added script functions to create tree layout.